<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zion830.threedollars.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

   <fragment
        android:id="@+id/navigation_write"
        android:name="com.zion830.threedollars.ui.category.StreetByMenuFragment"
        android:label="제보하기"
        tools:layout="@layout/fragment_street_by_menu" />

    <fragment
        android:id="@+id/navigation_vote"
        android:name="com.zion830.threedollars.ui.category.TruckByMenuFragment"
        android:label="투표하기"
        tools:layout="@layout/fragment_truck_by_menu" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.zion830.threedollars.ui.mypage.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_new_my_page" />

    <fragment
        android:id="@+id/navigation_popup"
        android:name="com.zion830.threedollars.ui.popup.PopupFragment"
        android:label="@string/popup"
        tools:layout="@layout/fragment_popup" />

    <fragment
        android:id="@+id/navigation_review"
        android:label="@string/title_add_store" />
</navigation>