<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
            name="viewModel"
            type="com.zion830.threedollars.ui.store_detail.vm.StoreEditViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_white"
        android:padding="20dp">
        
        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_delete_title"
            android:textColor="@color/color_black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/request_delete_description"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />
        
        <RadioGroup
            android:id="@+id/rg_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title2">
            
            <RadioButton
                android:id="@+id/btn_reason1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_radio"
                android:button="@null"
                android:checked="true"
                android:layoutDirection="rtl"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/request_delete_reason1"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"
                android:textStyle="bold" />
            
            <RadioButton
                android:id="@+id/btn_reason2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_radio"
                android:button="@null"
                android:layoutDirection="rtl"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/request_delete_reason2"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"
                android:textStyle="bold" />
            
            <RadioButton
                android:id="@+id/btn_reason3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_radio"
                android:button="@null"
                android:layoutDirection="rtl"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/request_delete_reason3"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"
                android:textStyle="bold" />
        </RadioGroup>
        
        <!--        android:drawableStart="@drawable/ic_check"-->
        
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_btn"
            android:elevation="@null"
            android:text="@string/request_delete"
            android:textColor="@color/gmm_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_reason" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>